# KiwiEngine

./: CMakeLists.txt  README.md
KiwiEngineCore/: CMakeLists.txt
KiwiEngineCore/includes/KiwiEngineCore/: Application.h  Input.h  Player.h
KiwiEngineCore/src/KiwiEngineCore/: Application.cpp  Input.cpp  Player.cpp
KiwiEngineEditor/: CMakeLists.txt
KiwiEngineEditor/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_application.cpp
